# JUDGE-ATLAS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 20260430_0009_add_source_snapshot_fk.py  20260430_1827_a326f99b4d95_add_source_registry_operational_fields.py
backend/app/: main.py
backend/app/ai/: __init__.py  pipeline.py
backend/app/api/routes/: __init__.py  admin_ingest.py  admin_ingestion.py  admin_review.py  admin_sources.py  ai_correctness.py  ai_review.py  evidence.py  graph.py  ingestion.py  map.py  (+3 more)
backend/app/auth/: admin.py
backend/app/core/: config.py  rate_limit.py
backend/app/ingestion/: adapters.py  courtlistener_bulk_normalizer.py  runner.py  source_registry_ctl.py
backend/app/models/: __init__.py  entities.py
backend/app/seed/: sample_data.py
backend/app/serializers/: public.py
backend/app/services/: ai_correctness.py  canonical_resolver.py  constants.py  evidence_store.py  graph_queries.py  publish_rules.py  snapshot_writer.py  source_fetcher.py
backend/app/tests/: conftest.py  test_admin_ingestion.py  test_canadian_laws.py  test_candidate_review_bridge.py  test_crawlee_import.py  test_crawlee_runner.py  test_crime_source_ingestion.py  test_evidence_store.py  test_external_snapshot_storage.py  test_graph_layer.py  test_open_data_adapters.py  test_outcomes_and_ingestion.py  test_publish_rules.py  test_rate_limit.py  test_review_gates.py  test_web_monitor_integration.py
backend/judgetracker_atlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+43 files in other folders)
