[project]
name = "judgetracker-atlas-backend"
version = "0.1.0"
description = "Runnable prototype backend for JudgeTracker Atlas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.9",
  "geoalchemy2>=0.16.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
